--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     <header class="masthead text-center text-white">
       <div class="masthead-content">
         <div class="container">
-          <h1 class="masthead-heading mb-0">ข่าวสาร</h1>
-          <h2 class="masthead-subheading mb-0">ที่น่าสนใจ</h2>
-          <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">Learn More</a>
+          <h1 class="masthead-heading mb-0">news</h1>
+          <h2 class="masthead-subheading mb-0">ผลงานของ</h2>
+          <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">รัฐบาล คสช.</a>
         </div>
       </div>
       <div class="bg-circle-1 bg-circle"></div>
