--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">ข่าวสาร</a>
+        <a class="navbar-brand" href="#">news</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -47,9 +47,9 @@
     <header class="masthead text-center text-white">
       <div class="masthead-content">
         <div class="container">
-          <h1 class="masthead-heading mb-0">news</h1>
-          <h2 class="masthead-subheading mb-0">ผลงานของ</h2>
-          <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">รัฐบาล คสช.</a>
+          <h1 class="masthead-heading mb-0">ผลงานของ</h1>
+          <h2 class="masthead-subheading mb-0">รัฐบาล คสช.</h2>
+          <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">View More</a>
         </div>
       </div>
       <div class="bg-circle-1 bg-circle"></div>
