--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
           </div>
           <div class="col-lg-6 order-lg-1">
             <div class="p-5">
-              <h2 class="display-4">For those about to rock...</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+              <h2 class="display-4">การทวงคืนผืนป่าจากนายทุน</h2>
+              <p> กระทรวงทรัพยากรธรรมชาติและสิ่งแวดล้อมเดินหน้าอย่างแข็งขันและถือเป็นผลงานที่ค่อนข้างเด่นชัดของ รัฐบาล และคสช.โดยสามารถทวงคืนผืนป่าได้จำนวนมาก โดยในปี 59 สามารถทวงคืนผืนป่าจากนายทุนได้ 1.4 แสนไร่และในปี 60 ตั้งเป้าทางคืน 1.07 แสนไร่ และในปี 61 ยังคงเดินหน้าต่อ</p>
             </div>
           </div>
         </div>
