--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
           </div>
           <div class="col-lg-6">
             <div class="p-5">
-              <h2 class="display-4">We salute you!</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+              <h2 class="display-4">นับตั้งแต่ปี 58 จากปัญหาการทำประมงผิดกฎหมาย</h2>
+              <p>ขาดการรายงานและไร้การควบคุม จึงทำให้ไทยถูก “ใบเหลือง” จากทางสหภาพยุโรป (อียู) และ คสช.ได้แก้ไขปัญหาหลายด้านทั้งการจดทะเบียนเรือประมง แก้ปัญหาการค้ามนุษย์ โดยการเดินหน้าในเรื่องนี้อย่างจริงจัง จึงคาดว่าจะได้รับการปลดใบเหลืองในเร็ววันนี้</p>
             </div>
           </div>
         </div>
