--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
           </div>
           <div class="col-lg-6 order-lg-1">
             <div class="p-5">
-              <h2 class="display-4">Let there be rock!</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+              <h2 class="display-4">การปราบปรามผู้มีอิทธิพล </h2>
+              <p>ถือเป็นมาตรการที่ รัฐบาลและ คสช.ดำเนินการมาอย่างต่อเนื่องดำเนินการโดยทหาร ตำรวจและฝ่ายปกครอง โดยกวาดล้างจับกุมอาวุธสงคราม อาวุธปืน กระสุน และวัตถุระเบิดได้จำนวนมาก มีผู้เกี่ยวข้องกว่า 30,000 คน รวมถึงและกำลังจับตาเครือข่ายและผู้ร่วมขบวนการทั้งหมด ไม่เว้นแม้แต่เจ้าหน้าที่รัฐที่เกี่ยวข้อง</p>
             </div>
           </div>
         </div>
