--- a/index.html
+++ b/index.html
@@ -112,6 +112,25 @@
       </div>
     </section>
 
+
+    <section>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-6">
+            <div class="p-5">
+              <img class="img-fluid rounded-circle" src="img/02.jpg" alt="">
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="p-5">
+              <h2 class="display-4">นับตั้งแต่ปี 58 จากปัญหาการทำประมงผิดกฎหมาย</h2>
+              <p>ขาดการรายงานและไร้การควบคุม จึงทำให้ไทยถูก “ใบเหลือง” จากทางสหภาพยุโรป (อียู) และ คสช.ได้แก้ไขปัญหาหลายด้านทั้งการจดทะเบียนเรือประมง แก้ปัญหาการค้ามนุษย์ โดยการเดินหน้าในเรื่องนี้อย่างจริงจัง จึงคาดว่าจะได้รับการปลดใบเหลืองในเร็ววันนี้</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Footer -->
     <footer class="py-5 bg-black">
       <div class="container">
