--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
           </div>
           <div class="col-lg-6">
             <div class="p-5">
-              <h2 class="display-4">นับตั้งแต่ปี 58 จากปัญหาการทำประมงผิดกฎหมาย</h2>
-              <p>ขาดการรายงานและไร้การควบคุม จึงทำให้ไทยถูก “ใบเหลือง” จากทางสหภาพยุโรป (อียู) และ คสช.ได้แก้ไขปัญหาหลายด้านทั้งการจดทะเบียนเรือประมง แก้ปัญหาการค้ามนุษย์ โดยการเดินหน้าในเรื่องนี้อย่างจริงจัง จึงคาดว่าจะได้รับการปลดใบเหลืองในเร็ววันนี้</p>
+              <h2 class="display-4">การปลดธงแดง ICAO </h2>
+              <p>ได้เป็นผลสำเร็จหลังจากที่องค์การการบินพลเรือนระหว่างประเทศ (ICAO) ได้ติดธงแดงประเทLไทย มีความเสี่ยงด้านความปลอดภัยด้านการบินพลเรือน จนต่อมาจากการเดินหน้าแก้ปัญหาอย่งจริงจัง ICAO ได้ถอดประเทศไทยออกจากรายชื่อประเทศที่มีความเสี่ยงด้านความปลอดภัยด้านการบินพลเรือน (ปลดธงแดง) ได้สำเร็จในช่วงปลายปี 60 ที่ผ่านมา</p>
             </div>
           </div>
         </div>
