เพิ่ม section สุดท้าย
บรรทัด 134-157

--- a/index.html
+++ b/index.html
@@ -131,6 +131,30 @@
       </div>
     </section>
 
+    <section>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-6 order-lg-2">
+            <div class="p-5">
+              <img class="img-fluid rounded-circle" src="img/03.jpg" alt="">
+            </div>
+          </div>
+          <div class="col-lg-6 order-lg-1">
+            <div class="p-5">
+              <h2 class="display-4">การปราบการเดินหน้าปราบปรามทุจริต </h2>
+              <p>เช่นการตรวจสอบทุจริตเงินทอนวัด โดยเฉพาะข้าราชการระดับสูงของสำนักงานพระพุทธศาสนา (พศ.) ที่ขอเงินทอนวัดกว่าร้อยละ 80 และมีวัดดังหลายแห่งเกี่ยวข้อง
+
+                กระทรวงศึกษาธิการ ได้ตรวจพบการทุจริตกองทุนเสมาโดยมีข้าราชการระดับสูงระดับสูงเข้าไปมีส่วนเกี่ยวข้อง โดยตลอดช่วงเวลา 10 ปี ตั้งแต่ พ.ศ. 2551-2561 พบว่า ได้ทำการทุจริตเงินงบประมาณในโครงการดังกล่าวเป็นจำนวนกว่า 88 ล้านบาท
+                
+                อีกกรณีที่สร้างความตกใจให้กับสังคม การทุจริตเงินสงเคราะห์คนไร้ที่พึ่ง กระทรวงพัฒนาสังคมและความมั่นคงของมนุษย์ (พม.) ที่มีเจ้าหน้าที่ตั้งแต่ระดับล่างไปจนถึงระดับปลัดกระทรวงที่มีส่วนเกี่ยวข้อง ดดยมีการกระทำผิดใน 53 จังหวัด งบประมาณกว่า 500 ล้านบาท
+                
+                ขณะที่บุคคลใกล้ชิดคณะรัฐบาลยังคงถูกตั้งคำถามทั้ง กรณีครอบครองนาฬิกาหรูและแหวนเพชร ของ พล.อ.ประวิตร วงษ์สุวรรณ รองนายกฯ การรับเหมาโครงการใหญ่ของภาครัฐ ของบุตรชาย พล.อ.ปรีชา จันทร์โอชา ที่สังคมยังคงจับตามองถึงการตรวจสอบ </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Footer -->
     <footer class="py-5 bg-black">
       <div class="container">
