--- a/index.html
+++ b/index.html
@@ -154,6 +154,25 @@
         </div>
       </div>
     </section>
+    <section>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-6 order-lg-2">
+            <div class="p-5">
+              <img class="img-fluid rounded-circle" src="img/03.jpg" alt="">
+            </div>
+          </div>
+          <div class="col-lg-6 order-lg-1">
+            <div class="p-5">
+              <h2 class="display-4">พลเอก ประยุทธ์ จันทร์โอชา</h2>
+              <p>ชื่อเล่น ตู่ 
+                
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- Footer -->
     <footer class="py-5 bg-black">
