--- a/index.html
+++ b/index.html
@@ -165,8 +165,16 @@
           <div class="col-lg-6 order-lg-1">
             <div class="p-5">
               <h2 class="display-4">พลเอก ประยุทธ์ จันทร์โอชา</h2>
-              <p>ชื่อเล่น ตู่ 
-                
+              <p>ชื่อเล่น ตู่ <br><br>
+                เกิดเมื่อ : 21 มีนาคม พ.ศ. 2497<br><br>
+                นามแฝง/ฉายา : บิ๊กตู่<br><br>
+                ถิ่นกำเนิด : จังหวัดนครราชสีมา<br><br>
+                ประวัติครอบครัว : ภรรยาชื่อ รศ.นราพร จันทร์โอชา<br><br>
+                การศึกษา : หลักสูตรเสนาธิการทหารบก (หลักสูตรหลักประจำ)ชุดที่63<br>
+                - โรงเรียนนายร้อยพระจุลจอมเกล้า (จปร.) รุ่น 23 เหล่าราบ<br>
+                - โรงเรียนเตรียมทหาร รุ่น 12 <br>
+                - มัธยมศึกษาปีที่ 3 โรงเรียนวัดนวลนรดิศ <br>
+                ตำแหน่งปัจจุบัน : 1 ตุลาคม 2553 ผู้บัญชาการทหารบก <br>
               </p>
             </div>
           </div>
