--- a/index.html
+++ b/index.html
@@ -28,15 +28,16 @@
     <section>
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-lg-6 order-lg-2">
+          <div class="col-lg-6 center-lg-2">
             <div class="p-5">
-              <img class="img-fluid rounded-circle" src="img/03.jpg" alt="">
+              <img class="img-fluid rounded-circle" src="img/big2.jpg" alt="">
             </div>
           </div>
           <div class="col-lg-6 order-lg-1">
             <div class="p-5">
-              <h2 class="display-4">พลเอก ประยุทธ์ จันทร์โอชา</h2>
-              <p>ชื่อเล่น ตู่ <br><br>
+              <h3 class="display-4">ประวัติ</h3>
+              <p>พลเอก ประยุทธ์ จันทร์โอชา<br><br>
+                ชื่อเล่น ตู่ <br><br>
                 เกิดเมื่อ : 21 มีนาคม พ.ศ. 2497<br><br>
                 นามแฝง/ฉายา : บิ๊กตู่<br><br>
                 ถิ่นกำเนิด : จังหวัดนครราชสีมา<br><br>
