--- a/index.html
+++ b/index.html
@@ -112,6 +112,17 @@
       </div>
     </section>
 
+    <section>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-12 order-lg-2">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d26083.051209022986!2d98.99272822500294!3d18.88669933667041!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30da2334d4ce0385%3A0xf0346c6d9b330f0!2sMaejo+University!5e0!3m2!1sen!2sth!4v1542906512035" width="1200" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+          </div>
+          
+        </div>
+      </div>
+    </section>
+
     <!-- Footer -->
     <footer class="py-5 bg-black">
       <div class="container">
