--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
+    <!-- Index.js -->
+    <script src="js/index.js"></script>
+
   </body>
 
 </html>
