--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             </div>
             <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
-                  <img class="card-img-top"style="height: 225px; width: 100%; display: block;" src="img/บิ๊กตู่-ฝาก-6-คำถาม-ให้-ปชช.-ตอบด่วน.jpg" data-holder-rendered="true">
+                  <img class="card-img-top"style="height: 225px; width: 100%; display: block;" src="img/maxresdefault.jpg" data-holder-rendered="true">
                   <div class="card-body">
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
