--- a/index.html
+++ b/index.html
@@ -21,8 +21,28 @@
     <link href="css/one-page-wonder.min.css" rel="stylesheet">
 
   </head>
+  <style>
+  
 
-  <body>
+#ABC {
+  background-color: blue;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+body{
+  background: grey;
+  margin: 0;
+} 
+
+
+
+  </style>
+
+  <body background="img/04-7.jpg">
 
     <header>
       
@@ -46,18 +66,51 @@
         </div>
       </div>
     </nav>
+    </header>
 
     <main role="main">
 
-      <section class="jumbotron text-center">
-        <div class="container">
-          <h1 class="jumbotron-heading">Album of NCPO(คสช.)</h1>
-          <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
-          <p>
-            <a href="#" class="btn btn-primary my-2">About work</a>
-            <a href="#" class="btn btn-secondary my-2">About Policy</a>
-          </p>
-        </div>
+      <section class="jumbotron text-center" >
+        
+          <div id="myCarousel" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class=""></li>
+                <li data-target="#myCarousel" data-slide-to="1" class=""></li>
+                <li data-target="#myCarousel" data-slide-to="2" class="active"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item">
+                  <img class="first-slide" src="img/12345.jpg" alt="First slide">
+                  <div class="container">
+                    <div class="carousel-caption">
+                      <p><a class="btn btn-lg btn-primary" href="#" role="button">See more</a></p>
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img class="second-slide" src="img/1234.jpg" alt="Second slide">
+                  <div class="container">
+                    <div class="carousel-caption">
+                        <p><a class="btn btn-lg btn-primary" href="#" role="button">See more</a></p>                    </div>
+                  </div>
+                </div>
+                <div class="carousel-item active">
+                  <img class="third-slide" src="img/123.jpg" alt="Third slide">
+                  <div class="container">
+                    <div class="carousel-caption">
+                        <p><a class="btn btn-lg btn-primary" href="#" role="button">See more</a></p>                    </div>
+                  </div>
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
       </section>
 
       <div class="album py-5 bg-light">
