--- a/index.html
+++ b/index.html
@@ -22,96 +22,22 @@
 
   </head>
   <style>
-  
+    #ABC {
+      background-color: blue;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+    }
 
-#ABC {
-  background-color: blue;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-}
-
-body{
-  background: grey;
-  margin: 0;
-} 
-
-
-
+    body{
+      background: grey;
+      margin: 0;
+    } 
   </style>
 
-  <body background="img/04-7.jpg">
-
-    <header>
-      
-      <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
-      <div class="container">
-        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle></svg>
-        <a class="navbar-brand" href="#">Album of NCPO(คสช.)</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Sign Up</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Log In</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    </header>
-
-    <main role="main">
-
-      <section class="jumbotron text-center" >
-        
-          <div id="myCarousel" class="carousel slide" data-ride="carousel">
-              <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class=""></li>
-                <li data-target="#myCarousel" data-slide-to="1" class=""></li>
-                <li data-target="#myCarousel" data-slide-to="2" class="active"></li>
-              </ol>
-              <div class="carousel-inner">
-                <div class="carousel-item">
-                  <img class="first-slide" src="img/12345.jpg" alt="First slide">
-                  <div class="container">
-                    <div class="carousel-caption">
-                      <p><a class="btn btn-lg btn-primary" href="#" role="button">See more</a></p>
-                    </div>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <img class="second-slide" src="img/1234.jpg" alt="Second slide">
-                  <div class="container">
-                    <div class="carousel-caption">
-                        <p><a class="btn btn-lg btn-primary" href="#" role="button">See more</a></p>                    </div>
-                  </div>
-                </div>
-                <div class="carousel-item active">
-                  <img class="third-slide" src="img/123.jpg" alt="Third slide">
-                  <div class="container">
-                    <div class="carousel-caption">
-                        <p><a class="btn btn-lg btn-primary" href="#" role="button">See more</a></p>                    </div>
-                  </div>
-                </div>
-              </div>
-              <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
-            </div>
-      </section>
+  <body>
 
       <div class="album py-5 bg-light">
         <div class="container">
@@ -231,20 +157,6 @@ body{
           </div>
         </div>
       </div>
-
-    </main>
-
-    <!-- Footer -->
-    <footer class="py-5 bg-black">
-        <div class="container">
-          <p class="m-0 text-center text-white small">Copyright &copy; Your Website 2018</p>
-        </div>
-        <!-- /.container -->
-      </footer>
-  
-      <!-- Bootstrap core JavaScript -->
-      <script src="vendor/jquery/jquery.min.js"></script>
-      <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   
     </body>
   
