เปลี่ยนหัวเรื่อง title ชองเว็บ

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Picture of the NCPO(คสช.)</title>
+    <title>NCPO</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -21,17 +21,6 @@
     <link href="css/one-page-wonder.min.css" rel="stylesheet">
 
   </head>
-  <style>
-    #ABC {
-      background-color: blue;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-    }
-  </style>
-
   <body>
 
     <!-- Navigation -->
