--- a/index.html
+++ b/index.html
@@ -338,6 +338,9 @@
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
+    <!-- Including Chart.js -->
+    <script src="js/Chart.bundle.min.js"></script>
+    
     <!-- Index.js -->
     <script src="js/index.js"></script>
 
